--- a/src/main/resources/templates/sanpham.html
+++ b/src/main/resources/templates/sanpham.html
@@ -116,32 +116,34 @@
                     <h4>Không tìm thấy sản phẩm phù hợp</h4>
                 </div>
                 <div class="row">
-                    <div class="col-md-3" ng-repeat="p in items">
+                    <div class="col-md-4" ng-repeat="p in items" ng-init="checkFavorites(p.sanPham.ma,user)">
                         <div class="product-item">
-                            <div class="inner-content">
+                            <div class="inner-content" >
                                 <div class="product-thumb">
                                     <a href="/product/detail/{{ p.sanPham.ma }}" ng-click="searchDetail()">
                                         <img id="an" class="product-item m-auto d-block"
                                              ng-src="/assets/images/{{ p.sanPham.image[0].ma }}"
                                              alt="{{ p.sanPham.ten }}">
                                     </a>
-
-                                    <div class="product-action">
-                                        <div class="addto-wrap" ng-repeat="a in favorite">
-                                            <a class="add-wishlist" href="javascript:void(0)"
-                                               ng-show="a.sanPham === p.sanPham.ma && a.accounts === username"
-                                               ng-click="removeFavorite(p.sanPham.ma, username)">
-                                                <i class="zmdi zmdi-favorite" style="color: #a52834"></i>
+                                    <div class="product-action" >
+                                        <div class="addto-wrap">
+                                            <a class="remove-wishlist" href="javascript:void(0)"
+                                               title="Xóa khỏi yêu thích"
+                                               ng-if="isFavorite.sanPham === p.sanPham.ma"
+                                               ng-click="removeFavorite(p.sanPham.ma, user)">
+                                                <i class="zmdi zmdi-favorite"></i>
                                             </a>
                                             <a class="add-wishlist" href="javascript:void(0)"
-                                               ng-show="a.accounts !== username"
-                                               ng-click="addFavorite(p.sanPham.ma, user1)">
-                                                <i class="zmdi zmdi-favorite-outline zmdi-hc-fw icon"></i>
+                                               title="Thêm vào yêu thích"
+                                               ng-if="!isFavorite || (isFavorite && isFavorite.sanPham !== p.sanPham.ma)"
+                                               ng-click="addFavorite(p.sanPham.ma, user)">
+                                                <i class="zmdi zmdi-favorite-outline"></i>
                                             </a>
                                             <a class="add-cart" href="/product/detail/{{ p.sanPham.ma }}">
                                                 <i class="zmdi zmdi-shopping-cart-plus icon"></i>
                                             </a>
                                         </div>
+
                                     </div>
                                 </div>
                                 <div class="product-desc">
@@ -158,9 +160,9 @@
                 </div>
                 <br>
                 <div>
-                    <button ng-click="prevPage()" ng-disabled="currentPage === 1">Trang trước</button>
+                    <button ng-click="prevPage()" ng-disabled="currentPage === 1" class="btn-danger"><i class="zmdi zmdi-skip-previous"></i></button>
                     <span>Trang {{currentPage}}</span>
-                    <button ng-click="nextPage()" ng-disabled="currentPage === totalPages">Trang sau</button>
+                    <button ng-click="nextPage()" ng-disabled="currentPage === totalPages" class="btn-danger"><i class="zmdi zmdi-skip-next"></i></button>
                 </div>
             </div>
         </div>
@@ -169,6 +171,7 @@
         </div>
     </div>
 </main>
+
 
 </body>
 
