--- a/src/main/resources/static/assetss/css/components/shop/filter-bar.css
+++ b/src/main/resources/static/assetss/css/components/shop/filter-bar.css
@@ -98,4 +98,21 @@
     margin: 0px;
 }
 
+.sort-dropdown {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.sort-item {
+    padding: 10px;
+    cursor: pointer;
+}
+
+.sort-item:hover {
+    background-color: #f1f1f1;
+}
+
 /*# sourceMappingURL=filter-bar.css.map */
