--- a/src/main/resources/templates/sanpham.html
+++ b/src/main/resources/templates/sanpham.html
@@ -106,11 +106,20 @@
             </div>
 
             <!-- List product -->
-            <div class="product-showing col-lg-9 col-12">
+            <div class="product-showing col-lg-9 col-12 ">
                 <div class="sort">
-                    <div class="filter-icon" data-toggle="modal" data-target="#filterModal"><i
-                            class="fas fa-filter"></i></div>
+                    <div class="sort-content" id="sortDropdownBtn">
+                        Sắp xếp theo <span class="sort-name">Hàng mới</span><i class="zmdi zmdi-chevron-down"></i>
+                        <div class="sort-dropdown" id="sortDropdown">
+                            <div class="sort-item new-arrival active">Hàng mới</div>
+                            <div class="sort-item best-seller">Bán chạy</div>
+                            <div class="sort-item low-to-high-price" ng-click="sort('lowToHigh')">Giá thấp đến cao</div>
+                            <div class="sort-item high-to-low-price" ng-click="sort('highToLow')">Giá cao đến thấp</div>
+                        </div>
+                    </div>
+                    <div class="filter-icon" data-toggle="modal" data-target="#filterModal"><i class="fas fa-filter"></i></div>
                 </div>
+
                 <div class="no-products">
                     <img th:src="@{assetss/img/noresult.png}" alt="noresult.png">
                     <h4>Không tìm thấy sản phẩm phù hợp</h4>
@@ -128,17 +137,17 @@
 
                                     <div class="product-action">
                                         <div class="addto-wrap" ng-repeat="a in favorite">
-                                            <a class="add-wishlist" href="javascript:void(0)"
+                                            <a class="add-wishlist" ng-href="javascript:void(0)"
                                                ng-show="a.sanPham === p.sanPham.ma && a.accounts === username"
                                                ng-click="removeFavorite(p.sanPham.ma, username)">
                                                 <i class="zmdi zmdi-favorite" style="color: #a52834"></i>
                                             </a>
-                                            <a class="add-wishlist" href="javascript:void(0)"
+                                            <a class="add-wishlist" ng-href="javascript:void(0)"
                                                ng-show="a.accounts !== username"
                                                ng-click="addFavorite(p.sanPham.ma, user1)">
                                                 <i class="zmdi zmdi-favorite-outline zmdi-hc-fw icon"></i>
                                             </a>
-                                            <a class="add-cart" href="/product/detail/{{ p.sanPham.ma }}">
+                                            <a class="add-cart" ng-href="/product/detail/{{ p.sanPham.ma }}">
                                                 <i class="zmdi zmdi-shopping-cart-plus icon"></i>
                                             </a>
                                         </div>
@@ -157,11 +166,39 @@
                     </div>
                 </div>
                 <br>
-                <div>
-                    <button ng-click="prevPage()" ng-disabled="currentPage === 1">Trang trước</button>
-                    <span>Trang {{currentPage}}</span>
-                    <button ng-click="nextPage()" ng-disabled="currentPage === totalPages">Trang sau</button>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="pagination-content-wrap border-bottom">
+                            <nav class="pagination-nav">
+                                <ul class="pagination justify-content-center">
+                                    <li>
+                                        <button class="prev" ng-click="pager.first()">First</button>
+                                    </li>
+                                    <li>
+                                        <button class="prev" ng-click="pager.prev()">
+                                            <i class="fa fa-chevron-left"></i>
+                                        </button>
+                                    </li>
+                                    <li ng-repeat="page in pager.pages">
+                                        <button ng-click="pager.setPage(page)">
+                                            {{page}}
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="next" ng-click="pager.next()">
+                                            <i class="fa fa-chevron-right"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="next" ng-click="pager.last()">Last</button>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
                 </div>
+
+
             </div>
         </div>
     </div>
