update thống kê, blogs

--- a/src/main/resources/templates/layout/_menu.html
+++ b/src/main/resources/templates/layout/_menu.html
@@ -21,7 +21,9 @@
 						</li>
 						<li>
 							<a href="favorites">Yêu Thích</a>
-
+						</li>
+						<li>
+							<a href="blogs">Blogs</a>
 						</li>
 						<li>
 							<a href="contact">Liên hệ</a>
