--- a/src/main/resources/templates/layout/index.html
+++ b/src/main/resources/templates/layout/index.html
@@ -151,7 +151,7 @@
 <script src="assetss/css/components/pagination/jquery.simplePagination.js"></script>
 <script src="assetss/js/shop.js"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
-<script src="assetss/js/except-home-page.js"></script>
+<!--<script src="assetss/js/except-home-page.js"></script>-->
 <script src="assetss/js/toastr.min.js"></script>
 <script src="assets/js/modernizr.min.js"></script>
 <script src="assets/js/jquery-migrate.js"></script>
