--- a/src/main/resources/static/assetss/css/components/except-home-page.css
+++ b/src/main/resources/static/assetss/css/components/except-home-page.css
@@ -4,22 +4,22 @@ main {
     min-height: 700px;
 }
 
-.search-form .btn-primary {
-    display: none;
-}
+/*.search-form .btn-primary {*/
+/*    display: none;*/
+/*}*/
 
-.search-input-wrapper {
-    display: grid;
-    grid-template-columns: 2fr auto;
-    position: relative;
-}
+/*.search-input-wrapper {*/
+/*    display: grid;*/
+/*    grid-template-columns: 2fr auto;*/
+/*    position: relative;*/
+/*}*/
 
-.search-input {
-    max-width: 100%;
-    border-radius: 0.25rem;
-}
+/*.search-input {*/
+/*    max-width: 100%;*/
+/*    border-radius: 0.25rem;*/
+/*}*/
 
-.no-products {
+.no-products-cus {
     display: none;
     justify-content: center;
     align-items: center;
@@ -27,70 +27,74 @@ main {
     flex-direction: column;
 }
 
-.no-products img {
+.no-products-cus img {
     max-width: 300px;
 }
 
-.breadcrumb {
-    margin-bottom: 1.25rem;
-    background-color: #ffffff;
-    display: block;
-    padding-top: 0px;
-    padding-bottom: 0px;
-}
-
-.previous-page {
-    color: #f04e40;
-}
-
-.arrow {
-    margin: 0px 0.3125rem;
-}
-
-.pagination-wrapper {
+.no-products-cus.show {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 3.125rem;
 }
 
-@media (max-width: 576px) {
-    main {
-        margin-top: 1.25rem;
-    }
-}
-@media (max-width: 768px) {
-    main {
-        margin-top: 1.25rem;
-    }
+/*.breadcrumb {*/
+/*    margin-bottom: 1.25rem;*/
+/*    background-color: #ffffff;*/
+/*    display: block;*/
+/*    padding-top: 0px;*/
+/*    padding-bottom: 0px;*/
+/*}*/
 
-    .navbar {
-        margin-bottom: 1.25rem;
-    }
+/*.previous-page {*/
+/*    color: #f04e40;*/
+/*}*/
 
-    .search-input-wrapper {
-        width: 100%;
-    }
+/*.arrow {*/
+/*    margin: 0px 0.3125rem;*/
+/*}*/
 
-    .search-result {
-        width: 100%;
-    }
-}
-@media (max-width: 767px) {
-    .search-form form {
-        display: flex;
-        flex-flow: nowrap;
-    }
-    .search-form .form-control {
-        border-top-right-radius: 0px;
-        border-bottom-right-radius: 0px;
-    }
-    .search-form .btn-primary {
-        display: block;
-        padding: 0.75rem 1.5rem;
-        border-top-left-radius: 0px;
-        border-bottom-left-radius: 0px;
-    }
-}
+/*.pagination-wrapper {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    margin-top: 3.125rem;*/
+/*}*/
+
+/*@media (max-width: 576px) {*/
+/*    main {*/
+/*        margin-top: 1.25rem;*/
+/*    }*/
+/*}*/
+/*@media (max-width: 768px) {*/
+/*    main {*/
+/*        margin-top: 1.25rem;*/
+/*    }*/
+
+/*    .navbar {*/
+/*        margin-bottom: 1.25rem;*/
+/*    }*/
+
+/*    .search-input-wrapper {*/
+/*        width: 100%;*/
+/*    }*/
+
+/*    .search-result {*/
+/*        width: 100%;*/
+/*    }*/
+/*}*/
+/*@media (max-width: 767px) {*/
+/*    .search-form form {*/
+/*        display: flex;*/
+/*        flex-flow: nowrap;*/
+/*    }*/
+/*    .search-form .form-control {*/
+/*        border-top-right-radius: 0px;*/
+/*        border-bottom-right-radius: 0px;*/
+/*    }*/
+/*    .search-form .btn-primary {*/
+/*        display: block;*/
+/*        padding: 0.75rem 1.5rem;*/
+/*        border-top-left-radius: 0px;*/
+/*        border-bottom-left-radius: 0px;*/
+/*    }*/
+/*}*/
 
 /*# sourceMappingURL=except-home-page.css.map */
